[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Enemies/BadBubble.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 16 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )
one_way_collision = true

[node name="KnockBackTimer" type="Timer" parent="."]
